--- a/daily note/2025-08-12.md
+++ b/daily note/2025-08-12.md
@@ -1,14 +1,28 @@
 #relation 
 Pietra hot girl latino 
 Jame the autistic guy 
-Sami the cute girl, same height as me 
+Sami the cute girl tall like me
 
-Jone jon the fat guy cordinator for mesa hispanic not the white fat guys 
+Jon jon the fat guy cordinator for mesa 
 Ding the person with strong arm 
-Nicoless nerd asian guy tall glasses 
+Nicoless nerd asian guy tall glasses
 
 Gita love scary movie 
 Gita love vietnamese food 
 
-Baylee the tall white cruly hair guy 
+Adaylen 
+
+Baylee the tall white cruly hair guy
+
+Alex 
+Important link https://docs.google.com/document/u/0/d/127SR0LzRPFOv4uzwAG4Zb8GzWCDGnlw5dBR4-58R-XQ/mobilebasic
+
+The big white guy marine statictis 
+Daina  wear glasses and hispanic Mesa coordinator
+
+Joshep thwhite fat man military wife 
+
+
+Jame tran austitic guy vietnamnational everyone in my class vietnam national
+ Pham tranj the international student here also vietnamnational
 
